// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupTests Popups can be anchored 1`] = `
{
  "AutomationId": "anchor-popup",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 189,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "Clip": null,
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 19,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Text": "The following tests popup Anchor",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 250,
      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 32,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 19,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 32,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "10,10,10,10",
          "Text": "Text Input to Anchor popup to: ",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 300,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        {
          "Background": "#B3FFFFFF",
          "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#E4000000",
          "Height": 32,
          "HorizontalAlignment": "Stretch",
          "Left": 300,
          "Margin": "0,0,0,0",
          "Padding": "10,5,6,6",
          "Text": "",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 300,
          "XamlType": "Windows.UI.Xaml.Controls.TextBox",
          "children": [
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": [
                {
                  "Background": "#B3FFFFFF",
                  "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "BorderElement",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                },
                {
                  "Background": "#00FFFFFF",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#E4000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "1,1,1,1",
                  "Name": "ContentElement",
                  "Padding": "10,5,6,6",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "Root",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Border",
                      "children": [
                        {
                          "Background": "#00FFFFFF",
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                          "children": [
                            {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#E4000000",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "10,5,6,6",
                              "Name": "ScrollContentPresenter",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                              "children": [
                                {
                                  "Clip": null,
                                  "FlowDirection": "LeftToRight",
                                  "HorizontalAlignment": "Stretch",
                                  "Left": 0,
                                  "Margin": "0,0,0,0",
                                  "Top": 0,
                                  "VerticalAlignment": "Stretch",
                                  "Visibility": "Visible",
                                  "XamlType": "Windows.UI.Xaml.FrameworkElement",
                                },
                              ],
                            },
                            {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": null,
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.Grid",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#99000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "DescriptionPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "Background": null,
      "BorderBrush": "#E4000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 138,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 51,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": [
        {
          "AccessibilityRole": "Button",
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 50,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 50,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 618,
          "XamlType": "Microsoft.ReactNative.ViewControl",
          "children": [
            {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Foreground": "#FF000000",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
              "children": [
                {
                  "Background": "#B3FFFFFF",
                  "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
                  "BorderThickness": "1,1,1,1.5",
                  "Clip": null,
                  "CornerRadius": "3,3,3,3",
                  "FlowDirection": "LeftToRight",
                  "Height": 38,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 618,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 1,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 1,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 616,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Background": null,
                          "BorderBrush": "#E4000000",
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "Height": 35,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 616,
                          "XamlType": "Microsoft.ReactNative.ViewPanel",
                          "children": [
                            {
                              "Clip": null,
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#E4000000",
                              "Height": 19,
                              "HorizontalAlignment": "Stretch",
                              "Left": 8,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Text": "Open Popup",
                              "Top": 8,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "Width": 600,
                              "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PopupTests Popups can have customized accessibility 1`] = `
{
  "AutomationId": "popup-accessibility",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 500,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 500,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Button",
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 37,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 500,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 500,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 498,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 498,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Toggle popup",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 482,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`PopupTests Popups can have different placement 1`] = `
{
  "AutomationId": "popup-placement",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 500,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 500,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Button",
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 37,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 500,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 500,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 498,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 498,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Toggle popup",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 482,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
